--- a/src/style.css
+++ b/src/style.css
@@ -5,12 +5,13 @@
   font-style: normal;
 }
 
-html,
+/* html,
 body,
 #fullheight {
   min-height: 100% !important;
   height: 100%;
-}
+} */
+
 *,
 body {
   margin: 0;
