--- a/src/Components/App/app.css
+++ b/src/Components/App/app.css
@@ -7,3 +7,13 @@
   flex-direction: column;
   padding-bottom: 2rem;
 }
+
+.ant-pagination {
+  margin: 2rem auto !important;
+}
+.ant-alert {
+  margin: 2rem 2rem 0rem 2rem !important;
+}
+.nothing-found {
+  margin: 1rem auto 0px;
+}
