--- a/src/Components/Movie/movie.css
+++ b/src/Components/Movie/movie.css
@@ -1,7 +1,10 @@
 .movie-card {
-  margin-left: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   margin-top: 2rem;
-  width: 454px;
+  flex-basis: 452px;
+  flex-grow: 1;
+  flex-shrink: 1;
   display: flex;
   box-shadow: 1px 1px 10px gray;
 }
@@ -11,18 +14,23 @@
 }
 .movie-info {
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 9px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .movie-title {
-  margin-top: 12px;
+  margin-bottom: 0;
   font-size: 20px;
   line-height: 28px;
+  align-self: center;
 }
 .movie-date {
   font-size: 12px;
   color: #827e7e;
-  margin-top: 7px;
+  margin-top: 5px;
+  margin-bottom: -1px;
   line-height: 22px;
 }
 .movie-genres {
@@ -32,16 +40,124 @@
 .movie-genre {
   margin-top: 7px;
   margin-right: 8px;
+  background-color: #fafafa;
+  border: 1px solid #d9d9d9;
+  border-radius: 2px;
+  font-size: 12px;
+  line-height: 15px;
+  padding: 2px 3px 3px 5px;
 }
 
 .movie-description {
   margin-top: 7px;
+  margin-right: 11px;
   line-height: 22px;
+  margin-bottom: 0;
 }
-.ant-alert {
-}
+
 .ant-spin {
   margin: 0 auto !important;
-  width: 454px !important;
-  height: 281px !important;
+}
+
+.movie-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 12px;
+}
+
+.average-vote {
+  margin-bottom: 0;
+  font-size: 12px;
+  line-height: 22px;
+  border-radius: 100%;
+  padding: 6px 8px;
+  margin-left: 4px;
+}
+
+.ant-rate-star {
+  margin-right: 4px !important;
+}
+.movie-rate.ant-rate {
+  margin-bottom: 10px;
+}
+
+.movie-spin {
+  width: 454px;
+  height: 281px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.description-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.rate-container {
+  flex-grow: 1;
+  display: flex;
+  align-items: flex-end;
+}
+@media (max-width: 1280px) {
+  .movie-card {
+    margin-left: 0rem;
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  .movie-card {
+    display: block;
+    min-height: 245px;
+    position: relative;
+    flex-basis: auto;
+    max-width: 100%;
+  }
+  .movie-info {
+    display: block;
+    padding-left: 10px;
+    padding-right: 8px;
+  }
+
+  .movie-header {
+    margin-top: 4px;
+  }
+
+  .movie-date {
+    margin-top: 4px;
+  }
+
+  .ant-rate.movie-rate {
+    /* margin-top: 30px !important; */
+  }
+
+  .rate-container {
+    flex-grow: 1;
+    display: block;
+    text-align: end;
+    position: absolute;
+    bottom: 0;
+    right: 10px;
+  }
+
+  .movie-img {
+    float: left;
+    max-width: 60px;
+    height: 91px;
+    margin-top: 6px;
+    margin-left: 10px;
+    margin-right: 13px;
+  }
+  .movie-description {
+    float: left;
+    text-align: left;
+    text-align: start;
+  }
+  /* .ant-rate-star {
+    text-align: end !important;
+  } */
 }
