--- a/src/style.css
+++ b/src/style.css
@@ -5,27 +5,23 @@
   font-style: normal;
 }
 
-:root {
-  --max-mobile-size: 768px;
-  --main-bg-color: brown;
-}
 *,
 body {
   margin: 0;
   padding: 0;
   font-family: "inter";
 }
-body {
-  padding: 0px 15%;
-  background-color: #f7f7f7 !important;
-}
 button {
   cursor: pointer;
 }
+#root {
+  padding: 0px 15%;
+  background-color: #f7f7f7;
+}
 
 @media (max-width: 768px) {
-  body {
+  #root {
     padding: 0;
-    background-color:#fff !important;
+    background-color: #fff;
   }
 }
